[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stk"
version = "0.4"
description = "Toolkit for 3D volume processing"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Simon Ekström" },
]
dependencies = [
    "numpy",
]

